--- a/package.json
+++ b/package.json
@@ -1,1 +1,9 @@
-{"type":"module","dependencies":{"chart.js":"^4.4.0"}}
+{
+    "type":"module",
+    "scripts": {
+        "serve": "python -m http.server -d src"
+    },
+    "dependencies": {
+        "chart.js":"^4.4.0"
+    }
+}
