--- a/www/package.json
+++ b/www/package.json
@@ -4,15 +4,15 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "preview": "vite preview"
+        "dev": "astro dev",
+        "build": "astro build",
+        "preview": "astro preview"
     },
     "devDependencies": {
-        "typescript": "^5.2.2",
-        "vite": "^5.2.0"
+        "typescript": "^5.2.2"
     },
     "dependencies": {
+        "astro": "^4.9.2",
         "chart.js": "^4.4.0"
     }
 }
