--- a/www/package.json
+++ b/www/package.json
@@ -4,15 +4,21 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "astro dev",
-        "build": "astro build",
-        "preview": "astro preview"
-    },
-    "devDependencies": {
-        "typescript": "^5.2.2"
+        "dev": "vite dev",
+        "build": "vite build",
+        "preview": "vite preview",
+        "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
     },
     "dependencies": {
-        "astro": "^4.9.2",
-        "chart.js": "^4.4.0"
+        "@sveltejs/adapter-auto": "^3.0.0",
+        "@sveltejs/kit": "^2.0.0",
+        "@sveltejs/vite-plugin-svelte": "^3.0.0",
+        "svelte": "^5.0.0-next.1",
+        "svelte-check": "^3.6.0",
+        "svelte-language-server": "^0.16.11",
+        "tslib": "^2.4.1",
+        "typescript": "^5.0.0",
+        "vite": "^5.0.3"
     }
 }
