--- a/www/package.json
+++ b/www/package.json
@@ -14,7 +14,7 @@
         "@sveltejs/adapter-auto": "^3.0.0",
         "@sveltejs/kit": "^2.0.0",
         "@sveltejs/vite-plugin-svelte": "^3.0.0",
-        "svelte": "^5.0.0-next.1",
+        "svelte": "5.0.0-next.193",
         "svelte-check": "^3.6.0",
         "svelte-language-server": "^0.16.11",
         "tslib": "^2.4.1",
