--- a/www/package.json
+++ b/www/package.json
@@ -11,14 +11,15 @@
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
     },
     "dependencies": {
-        "@sveltejs/adapter-auto": "^3.0.0",
+        "@sveltejs/adapter-static": "^3.0.0",
         "@sveltejs/kit": "^2.0.0",
         "@sveltejs/vite-plugin-svelte": "^3.0.0",
-        "svelte": "5.0.0-next.193",
+        "svelte": "^5.0.0-next.1",
         "svelte-check": "^3.6.0",
         "svelte-language-server": "^0.16.11",
         "tslib": "^2.4.1",
         "typescript": "^5.0.0",
-        "vite": "^5.0.3"
+        "vite": "^5.0.3",
+        "chart.js": "^4.4.0"
     }
 }
