--- a/www/package.json
+++ b/www/package.json
@@ -14,12 +14,15 @@
         "@sveltejs/adapter-static": "^3.0.0",
         "@sveltejs/kit": "^2.0.0",
         "@sveltejs/vite-plugin-svelte": "^3.0.0",
+        "chart.js": "^4.4.0",
         "svelte": "^5.0.0-next.1",
         "svelte-check": "^3.6.0",
         "svelte-language-server": "^0.16.11",
         "tslib": "^2.4.1",
         "typescript": "^5.0.0",
-        "vite": "^5.0.3",
-        "chart.js": "^4.4.0"
+        "vite": "^5.0.3"
+    },
+    "devDependencies": {
+        "less": "^4.2.0"
     }
 }
