--- a/www/package.json
+++ b/www/package.json
@@ -11,16 +11,16 @@
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
     },
     "dependencies": {
-        "@sveltejs/adapter-static": "^3.0.0",
-        "@sveltejs/kit": "^2.0.0",
-        "@sveltejs/vite-plugin-svelte": "^3.0.0",
-        "chart.js": "^4.4.0",
-        "svelte": "^5.0.0-next.1",
-        "svelte-check": "^3.6.0",
-        "svelte-language-server": "^0.16.11",
-        "tslib": "^2.4.1",
-        "typescript": "^5.0.0",
-        "vite": "^5.0.3"
+        "@sveltejs/adapter-static": "^3.0.3",
+        "@sveltejs/kit": "^2.5.21",
+        "@sveltejs/vite-plugin-svelte": "^3.1.1",
+        "chart.js": "^4.4.3",
+        "svelte": "5.0.0-next.210",
+        "svelte-check": "^3.8.5",
+        "svelte-language-server": "^0.16.14",
+        "tslib": "^2.6.3",
+        "typescript": "^5.5.4",
+        "vite": "^5.4.0"
     },
     "devDependencies": {
         "less": "^4.2.0"
