--- a/www/package.json
+++ b/www/package.json
@@ -11,18 +11,22 @@
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
     },
     "dependencies": {
-        "@sveltejs/adapter-static": "^3.0.3",
-        "@sveltejs/kit": "^2.5.21",
-        "@sveltejs/vite-plugin-svelte": "^3.1.1",
-        "chart.js": "^4.4.3",
+        "@sveltejs/adapter-static": "^3.0.5",
+        "@sveltejs/kit": "^2.5.28",
+        "@sveltejs/vite-plugin-svelte": "^3.1.2",
+        "chart.js": "^4.4.4",
+        "n8ao": "^1.9.2",
+        "postprocessing": "^6.36.2",
         "svelte": "5.0.0-next.210",
-        "svelte-check": "^3.8.5",
+        "svelte-check": "^3.8.6",
         "svelte-language-server": "^0.16.14",
-        "tslib": "^2.6.3",
-        "typescript": "^5.5.4",
-        "vite": "^5.4.0"
+        "three": "^0.168.0",
+        "tslib": "^2.7.0",
+        "typescript": "^5.6.2",
+        "vite": "^5.4.7"
     },
     "devDependencies": {
+        "@types/three": "^0.168.0",
         "less": "^4.2.0"
     }
 }
